# casting-workstation-phase-check

./: .gitignore  CastingWorkstation.spec  GITHUB_PUBLISHING_TEXT.md  GITHUB_UPLOAD_CHECKLIST.md  PPT_IMAGE_ORDER.md  README.md  pyproject.toml
app/: __init__.py  main.py
app/core/: __init__.py  config.py  environment.py  runtime.py  session.py
app/core/db/: __init__.py  connection.py  initializer.py  schema.sql
app/core/repositories/: __init__.py  ai_repository.py  cad_repository.py  document_repository.py  material_repository.py  parameter_repository.py  part_repository.py  project_repository.py  scheme_repository.py  settings_repository.py  simulation_repository.py
app/core/services/: __init__.py  calculation_service.py  (+3 more)
app/desktop/: __init__.py  main_window.py
app/integrations/: __init__.py
artifacts/: demo_case.json  demo_materials_manifest.md  demo_workflow_summary.json  demo_workflow_summary.md
bridge/solidworks-bridge/: Program.cs  README.md  SolidWorksBridge.csproj
scripts/: build_showcase_assets.py  capture_walkthrough_screenshots.py  check_environment.py  finalize_delivery_package.py  generate_application_pack.py  generate_compact_defense_pack.py  generate_defense_materials.py  generate_defense_support_docs.py  generate_demo_docs.py  generate_final_submission_bundle.py  generate_k_cover_initial_model.py  generate_k_cover_refined_model.py  generate_k_cover_v3_outline_fit.py  generate_k_cover_v4_dim_refine.py  generate_submission_runbook.py  init_db.py  prepare_demo_case.py  record_demo_walkthrough.py  run_demo_workflow.py
(+17 files in other folders)
