[project]
name = "casting-workstation"
version = "0.1.0"
description = "Desktop assistant prototype for sand casting process design, simulation archiving, and process-card-centered project delivery."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7,<7.0",
  "python-docx>=1.1.2,<2.0",
  "docxtpl>=0.19.1,<1.0",
  "openpyxl>=3.1.5,<4.0",
]

[project.scripts]
casting-workstation = "app.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
